decision tree classifier

--- a/feature_analysis/feature_analysis.ipynb
+++ b/feature_analysis/feature_analysis.ipynb
@@ -74273,6 +74273,251 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NewsGuard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final feature set "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "classify 1: ['Upvote Ratio', 'Subreddit Subscribers', 'Ups', 'function', 'pronoun', 'ppron', 'i', \n",
+    "'ipron', 'article', 'prep', 'auxverb', 'adverb', 'conj', 'verb', 'adj', 'compare', 'interrog', \n",
+    "'quant', 'affect', 'posemo', 'cogproc', 'insight', 'cause', 'tentat', 'differ', 'percept', \n",
+    "'drives', 'focuspast', 'focuspresent', 'focusfuture', 'relativ', 'motion', 'space', 'biden', 'conspiracy', 'pedophile', 'pedophiles', 'qanon', 'satanic', 'theory', 'trafficking', 'trump']\n",
+    "\n",
+    "\n",
+    "classify 2: [Subreddit Subscribers',\n",
+    " 'Ups',\n",
+    " 'https',\n",
+    " 'com',\n",
+    " 'news',\n",
+    " 'trump',\n",
+    " 'youtube',\n",
+    " '2020',\n",
+    " 'watch',\n",
+    " 'biden',\n",
+    " 'qanon',\n",
+    " 'reddit',\n",
+    " 'children',\n",
+    " 'html',\n",
+    " 'child',\n",
+    " 'military',\n",
+    " 'trafficking',\n",
+    " 'government',\n",
+    " 'people',\n",
+    " '11',\n",
+    " 'human',\n",
+    " 'states',\n",
+    " 'man',\n",
+    " 'old',\n",
+    " 'years',\n",
+    " 'operation',\n",
+    " 'media',\n",
+    " 'http',\n",
+    " 'control',\n",
+    " 'org',\n",
+    " 'state',\n",
+    " 'president',\n",
+    " 'good',\n",
+    " 'clinton',\n",
+    " 'world',\n",
+    " 'https www',\n",
+    " 'satanic',\n",
+    " 'united',\n",
+    " 'used',\n",
+    " 'case',\n",
+    " 'new',\n",
+    " 'www',\n",
+    " '10',\n",
+    " 'story',\n",
+    " 'time',\n",
+    " 'intelligence',\n",
+    " 'human trafficking',\n",
+    " 'post',\n",
+    " 'money',\n",
+    " 'donald',\n",
+    " 'sex',\n",
+    " 'public',\n",
+    " 'war',\n",
+    " 'election',\n",
+    " 'big',\n",
+    " 'make',\n",
+    " 'point',\n",
+    " 'great',\n",
+    " 'just',\n",
+    " 'called',\n",
+    " 'evidence',\n",
+    " 'end',\n",
+    " 'like',\n",
+    " 'sex trafficking',\n",
+    " 'right',\n",
+    " 'pedophile',\n",
+    " 'order',\n",
+    " 'group',\n",
+    " 'america',\n",
+    " 'use',\n",
+    " 'conspiracy',\n",
+    " 'said',\n",
+    " 'year',\n",
+    " 'evil',\n",
+    " 'black',\n",
+    " 'american',\n",
+    " 'abuse',\n",
+    " 'pedophiles',\n",
+    " 'know',\n",
+    " 'way',\n",
+    " 'believe',\n",
+    " 'using',\n",
+    " 'did',\n",
+    " 'want',\n",
+    " 'Upvote Ratio',\n",
+    " 'work',\n",
+    " 'history',\n",
+    " 'country',\n",
+    " 'fact',\n",
+    " 'theories',\n",
+    " 'think',\n",
+    " 'don',\n",
+    " 'power',\n",
+    " 'say',\n",
+    " 'does',\n",
+    " 'day',\n",
+    " 'actually',\n",
+    " 'come',\n",
+    " 'doing',\n",
+    " 'let',\n",
+    " 'ring',\n",
+    " 'true',\n",
+    " 'says',\n",
+    " 'real',\n",
+    " 'political',\n",
+    " 'high',\n",
+    " 'place',\n",
+    " 'need',\n",
+    " 'deep',\n",
+    " 'information',\n",
+    " 'times',\n",
+    " 'coming',\n",
+    " 'family',\n",
+    " 'secret',\n",
+    " 'known',\n",
+    " 'really',\n",
+    " 'twitter',\n",
+    " 'look',\n",
+    " 'life',\n",
+    " 'sure',\n",
+    " 'satan',\n",
+    " 'video',\n",
+    " 'house',\n",
+    " 'truth',\n",
+    " 'going',\n",
+    " 'stop',\n",
+    " 'im',\n",
+    " 'things',\n",
+    " 'long',\n",
+    " 'anti',\n",
+    " 'social',\n",
+    " 'feel',\n",
+    " 'dont',\n",
+    " 'got',\n",
+    " 'read',\n",
+    " 'pedophilia',\n",
+    " 'having',\n",
+    " 'death',\n",
+    " 'told',\n",
+    " 'saying',\n",
+    " 'little',\n",
+    " 'involved']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"training_all_features.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add URL and Media URL once we have NewsGuard\n",
+    "classify1 = data[[\"Output\", 'Subreddit','Media Type','Upvote Ratio', \n",
+    "                 'Subreddit Subscribers', 'Ups', 'function', 'pronoun', 'ppron', 'i', \n",
+    "                 'ipron', 'article', 'prep', 'auxverb', 'adverb', 'conj', 'verb', 'adj', 'compare', 'interrog', \n",
+    "                 'quant', 'affect', 'posemo', 'cogproc', 'insight', 'cause', 'tentat', 'differ', 'percept', \n",
+    "                 'drives', 'focuspast', 'focuspresent', 'focusfuture', 'relativ', 'motion', 'space', 'biden', \n",
+    "                 'conspiracy', 'pedophile', 'pedophiles', 'qanon', 'satanic', 'theory', 'trafficking', 'trump']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[nan,\n",
+       " 'open.spotify.com',\n",
+       " 'twitter.com',\n",
+       " 'streamable.com',\n",
+       " 'soundcloud.com',\n",
+       " 'imgur.com',\n",
+       " 'vimeo.com',\n",
+       " 'scribd.com',\n",
+       " 'youtube.com',\n",
+       " 'm.youtube.com']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set(list(classify1[\"Media Type\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classify1.to_csv(\"training_classify1.csv\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
